crates/ruff/src/rules/flake8_pytest_style/snapshots/ruff__rules__flake8_pytest_style__tests__PT023_default.snap
---
source: crates/ruff/src/rules/flake8_pytest_style/mod.rs
expression: diagnostics
---
- kind:
    name: PytestIncorrectMarkParenthesesStyle
    body: "Use `@pytest.mark.foo()` over `@pytest.mark.foo`"
    suggestion: Add/remove parentheses
    fixable: true
  location:
    row: 12
    column: 1
  end_location:
    row: 12
    column: 16
  fix:
    edits:
      - location:
          row: 12
          column: 16
        end_location:
          row: 12
          column: 16
        content: ()
  parent: ~
- kind:
    name: PytestIncorrectMarkParenthesesStyle
    body: "Use `@pytest.mark.foo()` over `@pytest.mark.foo`"
    suggestion: Add/remove parentheses
    fixable: true
  location:
    row: 17
    column: 1
  end_location:
    row: 17
    column: 16
  fix:
    edits:
      - location:
          row: 17
          column: 16
        end_location:
          row: 17
          column: 16
        content: ()
  parent: ~
- kind:
    name: PytestIncorrectMarkParenthesesStyle
    body: "Use `@pytest.mark.foo()` over `@pytest.mark.foo`"
    suggestion: Add/remove parentheses
    fixable: true
  location:
    row: 24
    column: 5
  end_location:
    row: 24
    column: 20
  fix:
    edits:
      - location:
          row: 24
          column: 20
        end_location:
          row: 24
          column: 20
        content: ()
  parent: ~
- kind:
    name: PytestIncorrectMarkParenthesesStyle
    body: "Use `@pytest.mark.foo()` over `@pytest.mark.foo`"
    suggestion: Add/remove parentheses
    fixable: true
  location:
    row: 30
    column: 5
  end_location:
    row: 30
    column: 20
  fix:
    edits:
      - location:
          row: 30
          column: 20
        end_location:
          row: 30
          column: 20
        content: ()
  parent: ~
- kind:
    name: PytestIncorrectMarkParenthesesStyle
    body: "Use `@pytest.mark.foo()` over `@pytest.mark.foo`"
    suggestion: Add/remove parentheses
    fixable: true
  location:
    row: 38
    column: 9
  end_location:
    row: 38
    column: 24
  fix:
    edits:
      - location:
          row: 38
          column: 24
        end_location:
          row: 38
          column: 24
        content: ()
  parent: ~

