crates/ruff/src/rules/flake8_pytest_style/snapshots/ruff__rules__flake8_pytest_style__tests__PT023_no_parentheses.snap
---
source: crates/ruff/src/rules/flake8_pytest_style/mod.rs
expression: diagnostics
---
- kind:
    name: PytestIncorrectMarkParenthesesStyle
    body: "Use `@pytest.mark.foo` over `@pytest.mark.foo()`"
    suggestion: Add/remove parentheses
    fixable: true
  location:
    row: 46
    column: 1
  end_location:
    row: 46
    column: 18
  fix:
    edits:
      - location:
          row: 46
          column: 16
        end_location:
          row: 46
          column: 18
        content: ~
  parent: ~
- kind:
    name: PytestIncorrectMarkParenthesesStyle
    body: "Use `@pytest.mark.foo` over `@pytest.mark.foo()`"
    suggestion: Add/remove parentheses
    fixable: true
  location:
    row: 51
    column: 1
  end_location:
    row: 51
    column: 18
  fix:
    edits:
      - location:
          row: 51
          column: 16
        end_location:
          row: 51
          column: 18
        content: ~
  parent: ~
- kind:
    name: PytestIncorrectMarkParenthesesStyle
    body: "Use `@pytest.mark.foo` over `@pytest.mark.foo()`"
    suggestion: Add/remove parentheses
    fixable: true
  location:
    row: 58
    column: 5
  end_location:
    row: 58
    column: 22
  fix:
    edits:
      - location:
          row: 58
          column: 20
        end_location:
          row: 58
          column: 22
        content: ~
  parent: ~
- kind:
    name: PytestIncorrectMarkParenthesesStyle
    body: "Use `@pytest.mark.foo` over `@pytest.mark.foo()`"
    suggestion: Add/remove parentheses
    fixable: true
  location:
    row: 64
    column: 5
  end_location:
    row: 64
    column: 22
  fix:
    edits:
      - location:
          row: 64
          column: 20
        end_location:
          row: 64
          column: 22
        content: ~
  parent: ~
- kind:
    name: PytestIncorrectMarkParenthesesStyle
    body: "Use `@pytest.mark.foo` over `@pytest.mark.foo()`"
    suggestion: Add/remove parentheses
    fixable: true
  location:
    row: 72
    column: 9
  end_location:
    row: 72
    column: 26
  fix:
    edits:
      - location:
          row: 72
          column: 24
        end_location:
          row: 72
          column: 26
        content: ~
  parent: ~

