crates/ruff/src/rules/flake8_pytest_style/snapshots/ruff__rules__flake8_pytest_style__tests__PT024.snap
---
source: crates/ruff/src/rules/flake8_pytest_style/mod.rs
expression: diagnostics
---
- kind:
    name: PytestUnnecessaryAsyncioMarkOnFixture
    body: "`pytest.mark.asyncio` is unnecessary for fixtures"
    suggestion: "Remove `pytest.mark.asyncio`"
    fixable: true
  location:
    row: 14
    column: 1
  end_location:
    row: 14
    column: 22
  fix:
    edits:
      - location:
          row: 14
          column: 0
        end_location:
          row: 15
          column: 0
        content: ~
  parent: ~
- kind:
    name: PytestUnnecessaryAsyncioMarkOnFixture
    body: "`pytest.mark.asyncio` is unnecessary for fixtures"
    suggestion: "Remove `pytest.mark.asyncio`"
    fixable: true
  location:
    row: 20
    column: 1
  end_location:
    row: 20
    column: 20
  fix:
    edits:
      - location:
          row: 20
          column: 0
        end_location:
          row: 21
          column: 0
        content: ~
  parent: ~
- kind:
    name: PytestUnnecessaryAsyncioMarkOnFixture
    body: "`pytest.mark.asyncio` is unnecessary for fixtures"
    suggestion: "Remove `pytest.mark.asyncio`"
    fixable: true
  location:
    row: 27
    column: 1
  end_location:
    row: 27
    column: 22
  fix:
    edits:
      - location:
          row: 27
          column: 0
        end_location:
          row: 28
          column: 0
        content: ~
  parent: ~
- kind:
    name: PytestUnnecessaryAsyncioMarkOnFixture
    body: "`pytest.mark.asyncio` is unnecessary for fixtures"
    suggestion: "Remove `pytest.mark.asyncio`"
    fixable: true
  location:
    row: 33
    column: 1
  end_location:
    row: 33
    column: 20
  fix:
    edits:
      - location:
          row: 33
          column: 0
        end_location:
          row: 34
          column: 0
        content: ~
  parent: ~

