crates/ruff/src/rules/flake8_pytest_style/snapshots/ruff__rules__flake8_pytest_style__tests__PT026.snap
---
source: crates/ruff/src/rules/flake8_pytest_style/mod.rs
---
./resources/test/fixtures/flake8_pytest_style/PT026.py:19:2: PT026 [*] Useless `pytest.mark.usefixtures` without parameters
   |
19 | @pytest.mark.usefixtures()
   |  ^^^^^^^^^^^^^^^^^^^^^^^^^ PT026
20 | def test_error_with_parens():
21 |     pass
   |
   = help: Remove `usefixtures` decorator or pass parameters

ℹ Suggested fix
16 16 |     pass
17 17 | 
18 18 | 
19    |-@pytest.mark.usefixtures()
   19 |+
20 20 | def test_error_with_parens():
21 21 |     pass
22 22 | 

./resources/test/fixtures/flake8_pytest_style/PT026.py:24:2: PT026 [*] Useless `pytest.mark.usefixtures` without parameters
   |
24 | @pytest.mark.usefixtures
   |  ^^^^^^^^^^^^^^^^^^^^^^^ PT026
25 | def test_error_no_parens():
26 |     pass
   |
   = help: Remove `usefixtures` decorator or pass parameters

ℹ Suggested fix
21 21 |     pass
22 22 | 
23 23 | 
24    |-@pytest.mark.usefixtures
   24 |+
25 25 | def test_error_no_parens():
26 26 |     pass


